--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>About Page</h2>
+
+<h2>{{ page_title }}</h2>
     <p>
         The formation of the group grew out of a meeting Gandalf had with Thorin in Bree which kindled Thorin's interest in
         recapturing his long lost family inheritance. (Thorin's grandfather had been the King under the Mountain when Smaug
@@ -11,44 +12,46 @@
         business, welcomed a fourteenth to fill into their party.
     </p>
 
-    <div class="row featurette">
-        <div class="col-md-7">
-            <h3>Thorin Oakenshield</h3>
-            <p>
-                Thorin II was born in TA 2746 to Dwarf prince Thráin II in the city of the Lonely Mountain. Early in his
-                youth, he and the other Dwarves of the Lonely Mountain were forced to flee by the dragon Smaug in TA
-                2770. While in exile, he quickly grew to become a capable warrior. This was demonstrated when he
-                participated in the Battle of Azanulbizar in TA 2799. He fought with one of the Dwarven armies beneath
-                the East-gate of Moria. At some point in the fighting, his shield broke, and using an oaken tree branch
-                found on the ground as a shield, he gained the epithet "Oakenshield," which would remain with him even
-                in death.
-            </p>
-        </div>
-        <div class="col-md-5">
-            <img src="https://static.wikia.nocookie.net/lotr/images/7/76/Orcrist-Sword-of-Thorin-Oakenshield.jpg" alt="">
-        </div>
-    </div>
+    {% for member in company %}
 
-    <div class="row featurette">
-        <div class="col-md-5">
-            <img src="https://static.wikia.nocookie.net/lotr/images/5/56/FiliPoster.jpeg" alt="">
-        </div>
-        <div class="col-md-7">
-            <h3>Fili and Kili</h3>
-            <p>
-                Fíli and Kíli were nephews of Thorin, who was the elder brother of their mother Dís. They were also
-                nephews of Frerin, grandsons of Thráin II, and great-grandsons of Thrór. Fíli's most distinguishing
-                feature was his long nose, the longest of any of the Dwarves in Thorin's company.[2]
 
-                As the youngest Dwarves, Fíli and Kíli had the sharpest eyes, and were often sent scouting or searching.
-                It was they that found the Front Porch while in the Misty Mountains.[3]
 
-                With the other Dwarves, Fíli and Kíli encountered spiders and were later imprisoned by the Elvenking
-                Thranduil.[4] They escaped the cells thanks to Bilbo, traveling down the river in barrels until they
-                reached Lake-town.[5] The brothers accompanied Thorin and Bilbo to Lake-town while the others rested by
-                the river.
-            </p>
+
+        <div class="row featurette">
+
+            {% if loop.index % 2 != 0 %}
+
+                <div class="col-md-7">
+                    <h3><a href="/about/{{ member.url}}">{{ loop.index }}. {{ member.name}}</a></h3>
+                    <p>
+                        {{ member.description }}
+                    </p>
+                </div>
+                <div class="col-md-5">
+                    <img src="{{ member.image_source }}" alt="" class="featurette-image image-responsive">
+                </div>
             
+            {% else %}
+            <div class="col-md-5">
+                <img src="{{ member.image_source }}" alt="" class="featurette-image image-responsive">
+            </div>
+
+            <div class="col-md-7">
+                <h3><a href="/about/{{ member.url}}">{{ loop.index }}. {{ member.name}}</a></h3>
+                <p>
+                    {{ member.description }}
+                </p>
+            </div>
+            
+            {% endif %}
         </div>
-    </div>
+
+        {% if loop.index != loop.length %}
+
+            <hr class="featurette-divider">
+
+        {% endif %}
+
+    {% endfor %}
+
 {% endblock %}
